2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version to 0.5.95 as the API has now
	  changed. Many cleanups.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/Decoder.cpp, Atlas/Objects/Decoder.h,
	  Atlas/Objects/GenerateDecoder.py: Modify decoder so it
	  has a pointer to a Factories instance, which is by default the
	  global shared instance.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Anonymous.cpp, Anonymous.h, Decoder.cpp, Decoder.h, Dispatcher.cpp,
	  Dispatcher.h, Entity.h, ObjectsFwd.h, Operation.h, Root.cpp, Root.h,
	  RootEntity.cpp, RootEntity.h, RootEntityChildren.cpp,
	  RootOperation.cpp, RootOperation.h, RootOperationChildren1.cpp,
	  RootOperationChildren2.cpp, RootOperationChildren3.cpp,
	  RootOperationChildren4.cpp, RootOperationChildren5.cpp,
	  flag.cpp, objectFactory.cpp: Check in generated files to make it
	  easier for people to track latest changes.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/AttributeInfo.py: Fix the test on empty parents so
	  it uses the defaults for the instance, not the defaults for the
	  Root class.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/objectFactory.h,
	  Atlas/Objects/GenerateObjectFactory.py: Make Factories an singleton
	  and get rid of the static instance. Add constructors to ensure
	  it can be copied correctly.

	* Atlas/Objects/loadDefaults.cpp, tests/Objects/custom_ops.cpp:
	  Convert code from using the static objectFactory to using
	  the Factories::instance().

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/SmartPtr.h, Atlas/Objects/GenerateObjectFactory.py:
	  Make the footprint of SmartPtr factory the same, and get rid
	  of the nasty C cast from the factory code. Make conversion more
	  efficient by using iterators better.

	* Atlas/Objects/GenerateDecoder.py: Clean up formatting.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateDecoder.py: Cleanups.
