@@ -1,3 +1,7 @@
+2005-04-23  Al Riddoch  <alriddoch@zepler.org>
+
+	* Atlas-C++ 0.4.95 released.
+
 2005-04-18  Al Riddoch  <alriddoch@zepler.org>
 
 	* Atlas-C++ 0.5.94 released.
